--- a/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.html
+++ b/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.html
@@ -68,10 +68,11 @@
         <div><p class="p-text" style="margin-left: 37px;">Kweker: </p>
         <select [(ngModel)]="EigenaarID" required class="inputfield" size="1" style="width: 195px; height: 35px; color: lightslategrey; border-color: lightgray; font-size: 15px;">
                 <option  *ngFor="let item of ownerOptions" [ngValue]="item.id">{{item.voornaam}} {{item.achternaam}}</option>
-            </select><br><br><br>
+        </select></div><br><br><br>
         <div><p class="p-text" style="margin-left: 28px;">Eigenaar: </p><input pInputText type="text" class="inputfield" placeholder="Eigenaar..." [(ngModel)]="Kweker" /></div><br><br><br><br>
-        <div><p class="p-text" style="margin-left: -5px; margin-top: -1px;">Omschrijving: </p><textarea pInputTextarea [(ngModel)]="Omschrijving" class="textarea-content" [rows]="1" [cols]="30" autoResize="autoResize" placeholder="Omschrijving..."></textarea></div><br><br><br>
-        </div>
+        <div><p class="p-text" style="margin-left: -5px; margin-top: -1px;">Omschrijving: </p><textarea pInputTextarea [(ngModel)]="Omschrijving" class="textarea-content" [rows]="1" [cols]="30" autoResize="autoResize" placeholder="Omschrijving..."></textarea></div>        
+        <div><p class="p-text" style="margin-left: 50px;">Jong: </p><br><p-checkbox [(ngModel)]="IsJong" [binary]="true"></p-checkbox></div><br>
+        <div><p class="p-text" style="margin-left: 50px;">Dood: </p><br><p-checkbox [(ngModel)]="IsDood" [binary]="true"></p-checkbox></div>
     </div>   
     <button pButton type="button" label="Terug" icon="pi pi-undo" style="margin-top: 320px; margin-left: -320px;" [routerLink]="['/birds']"></button> 
     <button pButton type="button" label="Opslaan" icon="pi pi-check" class="button-save" (click)="CreateBird()"></button>    
