--- a/BirdFrontEnd/src/app/app.component.html
+++ b/BirdFrontEnd/src/app/app.component.html
@@ -1,11 +1,9 @@
 <p-toolbar>
     <div class="p-toolbar-group-left">
-        <!-- <p-button label="" icon="pi pi-plus"></p-button> -->            
-        <i class="pi pi-bars"></i>        
         <p-splitButton label="Vogels" [model]="birdItems" class="button-toolbar" ></p-splitButton>
-        <p-splitButton label="Kwekers" [model]="ownerItems" class="button-toolbar"></p-splitButton>
+        <p-splitButton label="Eigenaars" [model]="ownerItems" class="button-toolbar"></p-splitButton>
+        <p-splitButton label="Kwekers" [model]="breederItems" class="button-toolbar"></p-splitButton>
         <p-splitButton label="Koppels" [model]="coupleItems" class="button-toolbar"></p-splitButton>
-        <!-- <button pButton label="404" class="p-button-outlined" [routerLink]="['/page404']"></button> -->
     </div>
     
     <div class="p-toolbar-group-right">
