--- a/BirdFrontEnd/src/app/bird/bird-update/bird-update.component.html
+++ b/BirdFrontEnd/src/app/bird/bird-update/bird-update.component.html
@@ -1,4 +1,4 @@
-<body style="background-image: url('../../../assets/background.PNG'); background-repeat: no-repeat; background-size: cover; height: 656px;">
+<!-- <body style="background-image: url('../../../assets/background.PNG'); background-repeat: no-repeat; background-size: cover; height: 656px;">
 <p-panel header="Vogel Aanpassen: " *ngIf="bird" style="width: 650px; height: 500px; margin-left: 2%; margin-top: 2%;">
     <div style="float: left;">
         <div><p class="p-text">Ringnummer: </p><input pInputText type="st" class="inputfield" placeholder="{{bird.ringnummer}}" [(ngModel)]="bird.ringnummer" /></div><br><br><br>
@@ -19,4 +19,4 @@
     
     <button pButton type="button" label="Opslaan" icon="pi pi-check" (click)="SaveBird()"></button>    
 </p-panel>
-</body>
+</body> -->
