--- a/BirdFrontEnd/src/app/owner/owner-create/owner-create.component.html
+++ b/BirdFrontEnd/src/app/owner/owner-create/owner-create.component.html
@@ -1,4 +1,4 @@
-<body style="background-image: url('../../../assets/background.PNG'); background-repeat: no-repeat; background-size: cover; height: 656px;">
+<!-- <body style="background-image: url('../../../assets/background.PNG'); background-repeat: no-repeat; background-size: cover; height: 656px;">
 <p-panel header="Nieuwe Kweker Aanmaken: " style="float:left; width: 350px; margin-left: 38%; margin-top: 2%;">    
     <div><p style="float: left; margin-left: 10px;">Voornaam: </p><input pInputText type="text" style="float:right;" placeholder="Voornaam..." [(ngModel)]="Voornaam" /></div><br><br><br>
     <div><p style="float: left;">Achternaam: </p><input pInputText type="text" style="float:right;" placeholder="Achternaam..." [(ngModel)]="Achternaam" /></div><br><br><br>
@@ -7,4 +7,4 @@
     <button pButton type="button" label="Terug" icon="pi pi-undo" style="margin-top: -30px;" [routerLink]="['/owners']"></button> 
     <button pButton type="button" label="Opslaan" icon="pi pi-check" style="float: right; margin-top: -20px;" (click)="CreateOwner()"></button>
 </p-panel>
-</body>
+</body> -->
