--- a/BirdFrontEnd/src/app/owner/owner.component.html
+++ b/BirdFrontEnd/src/app/owner/owner.component.html
@@ -7,22 +7,22 @@
                 <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="ClearFilters()"></button>                
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Kweker" [(ngModel)]="SearchName" />
+                    <!-- <input type="text" pInputText placeholder="Zoek Kweker" [(ngModel)]="SearchName" /> -->
                 </span>   
                     <!-- <button pButton pRipple type="button" class="searchbar" style="margin-left: 5px;" label="Zoek" class="p-button-raised" (onclick)="SearchOwner()"></button> -->
                     
                     <div class="select-owners">
                         <label>Aantal Eigenaars: </label>
-                        <select [(ngModel)]="NoOwners" required class="inputfield" style="width: 80px; height: 35px; color: lightslategrey; border-color: lightgray; font-size: 15px;">
+                        <!-- <select [(ngModel)]="NoOwners" required class="inputfield" style="width: 80px; height: 35px; color: lightslategrey; border-color: lightgray; font-size: 15px;">
                             <option *ngFor="let item of items" value={{item}}>{{item}}</option>
-                        </select>
+                        </select> -->
                     </div>
             
                     <div class="select-sort">
                         <label>Sorteer op: </label>
-                        <select [(ngModel)]="SortItemOwners" required class="inputfield" style="width: 120px; height: 35px; color: lightslategrey; border-color: lightgray; font-size: 15px;">
+                        <!-- <select [(ngModel)]="SortItemOwners" required class="inputfield" style="width: 120px; height: 35px; color: lightslategrey; border-color: lightgray; font-size: 15px;">
                             <option *ngFor="let item of sortItems" value={{item}}>{{item}}</option>
-                        </select>
+                        </select> -->
                     </div> 
             </div>
         </ng-template>
