Finished breeder create

--- a/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.html
+++ b/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.html
@@ -34,7 +34,7 @@
     </div>
         <button pButton type="button" label="Opslaan" icon="pi pi-check" (click)="CreateBird()" class="inputfield" style="margin-top: -30px"></button>    
 </p-panel>-->
-<body style="background-image: url('../../../assets/background.PNG'); background-repeat: no-repeat; background-size: cover; height: 656px;">
+<body style="background-image: url('../../../assets/background.png'); background-repeat: no-repeat; background-size: cover; height: 656px;">
 <!-- <p-panel header="Nieuwe Vogel Aanmaken: " style="width: 650px; height: 500px; margin-left: 2%; margin-top: 2%;">
     <div style="float: left;">
         <div><p class="p-text">Ringnummer: </p><input pInputText type="text" class="inputfield" placeholder="Ringnummer..." [(ngModel)]="Ringnummer" /></div><br><br><br>
