--- a/BirdFrontEnd/src/app/breeder/breeder-create/breeder-create.component.html
+++ b/BirdFrontEnd/src/app/breeder/breeder-create/breeder-create.component.html
@@ -1,30 +1,37 @@
-<div class="c-breeder-create">
-    <form [formGroup]="breederForm">
-        <h2>Title Here</h2>
-
-        <div class="form-group">
-            <label for="firstName">Voornaam</label>
-            <input type="text" class="form-control" formControlName="firstName" id="firstName" placeholder="Davino">
+<div class="page">
+    <div class="page-wrapper">
+        <div class="page-header">
+            <h1>Breeder management</h1>
         </div>
-
-        <div class="form-group">
-            <label for="lastName">Naam</label>
-            <input type="text" class="form-control" formControlName="lastName" id="lastName" placeholder="Liessens">
+        <div class="page-body">
+            <form [formGroup]="breederForm">
+                <h2>Kweker aanmaken</h2>
+        
+                <div class="form-group">
+                    <label for="firstName">Voornaam</label>
+                    <input pInputText type="text" class="form-control" formControlName="firstName" id="firstName" placeholder="Davino">
+                </div>
+        
+                <div class="form-group">
+                    <label for="lastName">Naam</label>
+                    <input pInputText type="text" class="form-control" formControlName="lastName" id="lastName" placeholder="Liessens">
+                </div>
+        
+                <div class="form-group">
+                    <label for="phoneNumber">Telefoon</label>
+                    <input pInputText type="text" class="form-control" formControlName="phoneNumber" id="phoneNumber" placeholder="+324........">
+                </div>
+        
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input pInputText type="email" class="form-control" formControlName="email" id="email" placeholder="davino.liessens@telenet.be">
+                </div>
+        
+                <div class="form-footer">
+                    <button pButton type="button" class="p-button-outlined" (click)="goBack()" label="Terug"></button>
+                    <button pButton type="submit" (click)="onSubmit()" [disabled]="!breederForm.valid" label="Opslaan"></button>
+                </div>
+            </form>
         </div>
-
-        <div class="form-group">
-            <label for="phoneNumber">Telefoon</label>
-            <input type="text" class="form-control" formControlName="phoneNumber" id="phoneNumber" placeholder="+324........">
-        </div>
-
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" formControlName="email" id="email" placeholder="davino.liessens@telenet.be">
-        </div>
-
-        <div class="form-footer">
-            <button type="button" (click)="goBack()">Terug</button>
-            <button type="submit" (click)="onSubmit()" [disabled]="!breederForm.valid">Opslaan</button>
-        </div>
-    </form>
+    </div>
 </div>
