Added GET - CREATE - UPDATE

--- a/BirdFrontEnd/src/app/owner/owner-create/owner-create.component.html
+++ b/BirdFrontEnd/src/app/owner/owner-create/owner-create.component.html
@@ -1,10 +1,37 @@
-<!-- <body style="background-image: url('../../../assets/background.PNG'); background-repeat: no-repeat; background-size: cover; height: 656px;">
-<p-panel header="Nieuwe Kweker Aanmaken: " style="float:left; width: 350px; margin-left: 38%; margin-top: 2%;">    
-    <div><p style="float: left; margin-left: 10px;">Voornaam: </p><input pInputText type="text" style="float:right;" placeholder="Voornaam..." [(ngModel)]="Voornaam" /></div><br><br><br>
-    <div><p style="float: left;">Achternaam: </p><input pInputText type="text" style="float:right;" placeholder="Achternaam..." [(ngModel)]="Achternaam" /></div><br><br><br>
-    <div><p style="float: left;">Telefoon: </p><input pInputText type="text" style="float:right;" placeholder="Telefoon..." [(ngModel)]="Telefoon" /></div><br><br><br>
-    <div><p style="float: left;">E-mail: </p><input pInputText type="text" style="float:right;" placeholder="E-mail..." [(ngModel)]="Email" /></div><br><br><br><br>
-    <button pButton type="button" label="Terug" icon="pi pi-undo" style="margin-top: -30px;" [routerLink]="['/owners']"></button> 
-    <button pButton type="button" label="Opslaan" icon="pi pi-check" style="float: right; margin-top: -20px;" (click)="CreateOwner()"></button>
-</p-panel>
-</body> -->
+<div class="page">
+    <div class="page-wrapper">
+        <div class="page-header">
+            <h1>Owner management</h1>
+        </div>
+        <div class="page-body">
+            <form [formGroup]="ownerForm">
+                <h2>Eigenaar aanmaken</h2>
+        
+                <div class="form-group">
+                    <label for="firstName">Voornaam</label>
+                    <input pInputText type="text" class="form-control" formControlName="firstName" id="firstName" placeholder="Davino">
+                </div>
+        
+                <div class="form-group">
+                    <label for="lastName">Naam</label>
+                    <input pInputText type="text" class="form-control" formControlName="lastName" id="lastName" placeholder="Liessens">
+                </div>
+        
+                <div class="form-group">
+                    <label for="phoneNumber">Telefoon</label>
+                    <input pInputText type="text" class="form-control" formControlName="phoneNumber" id="phoneNumber" placeholder="+324........">
+                </div>
+        
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input pInputText type="email" class="form-control" formControlName="email" id="email" placeholder="davino.liessens@telenet.be">
+                </div>
+        
+                <div class="form-footer">
+                    <button pButton type="button" class="p-button-outlined" (click)="goBack()" label="Terug"></button>
+                    <button pButton type="submit" (click)="onSubmit()" [disabled]="!ownerForm.valid" label="Opslaan"></button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
