--- a/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.scss
+++ b/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.scss
@@ -1,47 +1,35 @@
-.item{
-    float:left;
-    margin-left: 5%;
-    margin-top: 2%;
+@import "src/scss/helpers";
+
+.page {
+    width: 100%;
+    height: calc(100vh - 71px);
+    overflow: auto;
+    background-color: var(--slate-gray-5-color);
+    background-image: url('../../../assets/background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.p-text{
-    float:left;
-}
-
-.inputfield{
-    float: right;
-    margin-top: 10px;
-}
-
-.textarea-content{
-    width: 195px;
-    max-width: 195px;
-    height: 40px;
-    margin-left: 30px;
-}
-
-:host ::ng-deep .p-dropdown {
-    width: 195px;
-    margin-left: 31px;
-    color: lightslategrey;
-    border-color: lightgray;
-    font-size: 15px;
-}
-
-.button-save{
-    margin-top: 320px;
-    float: right;
-    margin-right: -320px;
-}
-
-:host ::ng-deep .p-panel-content{
-    height: 400px;
-    width: 850px;
+.page-wrapper {
+    width: 70vw;
+    margin: 0 auto;
+    background-color: rgba(#ffffff, 0.6);
     
-    background-color: rgba(255, 255, 255, 0.7);
 }
 
-:host ::ng-deep .p-panel{
-    width: 850px;
-    margin-left: 23%;
+.page-header {
+    border-bottom: 1px solid var(--slate-gray-20-color);
+    background-color: var(--tuna-gray-20-color);
+
+    h1{
+        padding: 16px 8px;
+    }
+}
+
+.page-body {
+    padding: 16px 8px;
+
+    h2 {
+        padding-bottom: 16px;
+    }
 }
