--- a/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.scss
+++ b/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.scss
@@ -14,7 +14,7 @@
     width: 70vw;
     margin: 0 auto;
     background-color: rgba(#ffffff, 0.6);
-    
+    margin-top: 32px;
 }
 
 .page-header {
@@ -22,14 +22,26 @@
     background-color: var(--tuna-gray-20-color);
 
     h1{
-        padding: 16px 8px;
+        padding: 16px;
     }
 }
 
 .page-body {
-    padding: 16px 8px;
+    padding: 32px 16px;
 
     h2 {
         padding-bottom: 16px;
+    }
+}
+
+.form-group {
+    width: calc(50% - 8px);
+}
+
+.form-group-wrapper {
+    display: flex;
+
+    .form-group:last-child {
+        margin-left: 16px;
     }
 }
