--- a/BirdFrontEnd/src/app/breeder/breeder-create/breeder-create.component.scss
+++ b/BirdFrontEnd/src/app/breeder/breeder-create/breeder-create.component.scss
@@ -14,7 +14,7 @@
     width: 70vw;
     margin: 0 auto;
     background-color: rgba(#ffffff, 0.6);
-    
+    margin-top: 32px;
 }
 
 .page-header {
@@ -22,12 +22,12 @@
     background-color: var(--tuna-gray-20-color);
 
     h1{
-        padding: 16px 8px;
+        padding: 16px;
     }
 }
 
 .page-body {
-    padding: 16px 8px;
+    padding: 32px 16px;
 
     h2 {
         padding-bottom: 16px;
